Implement to do list crud functionality

--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,12 @@
         <div class="todo-container row">
             <div class="todo-title">
                 <h1>Today's To Do</h1>
+
                 <i class="fa-solid fa-repeat"></i>
             </div>
             <div class="add-todo">
-                <input type="text" id="add-todo" name="todo-item" placeholder="Add to your list..."
-                    aria-label="Add to do input">
+                <input type="text" id="add-todo" class="add-todo-input" name="todo-text"
+                    placeholder="Add to your list..." aria-label="Add to do input">
                 <label for="add-todo"><i class="add-todo-icon fa-solid fa-right-from-bracket"></i></label>
 
             </div>
